Try to fix sonarqube coverage stats, and address code smells.